# obj-load

./: .gitignore  Cargo.toml  Justfile  README.md  config.client.toml  config.server.toml
.github/workflows/: release.yml
client-core/: Cargo.toml
client-core/src/: config.rs  filepath_from_args.rs  folder.rs  lib.rs
debian/: obj-down-up-load-server.service  obj_load.service
obj-down-up-load-server/: Cargo.toml
obj-down-up-load-server/src/: config.rs  main.rs
obj-download/: Cargo.toml
obj-download/src/: main.rs
obj-upload/: Cargo.toml
obj-upload/src/: main.rs
src/: config.rs  folder.rs  lib.rs
