[package]
edition = "2021"
name = "obj-load"
version = "0.1.0"

[features]
bin-client = ["reqwest", "serde", "toml"]
bin-obj-download = ["bin-client"]
bin-obj-upload = ["bin-client"]
bin-server = ["axum", "tokio", "tokio-util", "serde", "toml"]

[dependencies]
once_cell = "1.18.0"

axum = {version = "0.6.20", features = ["multipart", "macros"], optional = true}
reqwest = {version = "0.11.18", features = ["blocking", "multipart"], optional = true}
serde = {version = "1.0", features = ["derive"], optional = true}
tokio = {version = "1.30.0", features = ["full"], optional = true}
tokio-util = {version = "0.7.8", features = ["io"], optional = true}
toml = {version = "0.7.6", optional = true}

[[bin]]
bench = false
name = "server"
required-features = ["bin-server"]
test = false

[[bin]]
bench = false
name = "obj-upload"
required-features = ["bin-obj-upload"]
test = false

[[bin]]
bench = false
name = "obj-download"
required-features = ["bin-obj-download"]
test = false

[package.metadata.deb]
assets = [
  ["target/release/server", "usr/bin/obj_load_server", "755"],
  ["config.server.toml", "etc/obj_load/config.toml", "644"],
  ["debian/obj_load.service", "lib/systemd/system/obj_load.service", "644"],
]
copyright = "2023, Ilya Bylich."
depends = "$auto, systemd"
extended-description = "A tiny personal service for file sharing."
features = ["bin-server"]
maintainer = "Obj-oad developer <ibylich@gmail.com>"
maintainer-scripts = "debian/scripts"
priority = "optional"
section = "admin"
