[workspace]
members = [
  "client-core",
  "obj-down-up-load-server",
  "obj-download",
  "obj-upload",
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
once_cell = "1.19"
axum = { version = "0.7", features = ["multipart", "macros"] }
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = { version = "0.8" }
walkdir = { version = "2" }
zip = { version = "1.1" }
